--- a/sample.html
+++ b/sample.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
   <head>
     <meta charset="utf-8">
@@ -6,7 +6,7 @@
   <body>
     <ul>
       <li>
-        <font color="black">AさんのGitHubアカウント:Takus0731/font>
+        <font color="black">AさんのGitHubアカウント</font>
       </li>
       <li>
         <font color="black">BさんのGitHubアカウント</font>
