--- a/sample.html
+++ b/sample.html
@@ -12,7 +12,7 @@
         <font color="black">BさんのGitHubアカウント:160441072</font>
       </li>
       <li>
-        <font color="red">ここの文字を変えてね</font>
+        <font color="red">ex2_b</font>
       </li>
     </ul>
   </body>
